fixed overflow and display problems

--- a/Homework3/Frontend/parking-app/src/app/pages/about/about.component.scss
+++ b/Homework3/Frontend/parking-app/src/app/pages/about/about.component.scss
@@ -1,5 +1,5 @@
 .main-card {  
-    overflow: hidden;
+   // overflow: hidden;
     color: #fff;
     background-image: url("https://i.dailymail.co.uk/i/pix/2016/08/25/20/379542C700000578-0-image-a-34_1472154226557.jpg");  
     background-size: 100%;  
@@ -12,8 +12,8 @@
 .example-card {
     overflow: hidden;
     max-width: 800px;
-    margin-top: 150px;  
-    margin-bottom: 300px;
+    margin-top: 7%;  
+    margin-bottom: 7%;
     border-radius: 20px;
     background-color: #c5d8fa;
     padding: 50px 100px 50px 100px;
@@ -27,13 +27,13 @@
 
 .photo {  
     overflow: hidden;
-    width: 70p0x;
+    width: 800px;
     height: 460px;
     color: #fff;
     background-image: url("https://image.freepik.com/free-vector/business-people-discussing-company-finances-illustration_1262-16251.jpg");  
     background-size: 100%;  
     background-size: cover;  
-    display: flex;
+
     justify-content: center;
     align-items: center;
 } 
