--- a/Homework3/Frontend/parking-app/src/app/pages/help/help.component.scss
+++ b/Homework3/Frontend/parking-app/src/app/pages/help/help.component.scss
@@ -10,8 +10,8 @@
 
 .example-card {
     max-width: 800px;
-    margin-top: 160px;  
-    margin-bottom: 300px;
+    margin-top: 7%;  
+    margin-bottom: 7%;
     border-radius: 20px;
     background-color: #c5d8fa;  
     padding: 50px 100px 50px 100px;
