--- a/Homework3/Frontend/parking-app/src/app/pages/home/home.component.scss
+++ b/Homework3/Frontend/parking-app/src/app/pages/home/home.component.scss
@@ -1,17 +1,10 @@
 .main-card {  
     color: #fff;
     background-image: url("https://i.dailymail.co.uk/i/pix/2016/08/25/20/379542C700000578-0-image-a-34_1472154226557.jpg");  
-<<<<<<< Updated upstream
-    background-size: 100%;  
-    background-size: cover;  
-    height: fit-content;
-    height: 100%;
-=======
     background-size: cover;
     height: fit-content;
     height: 100%;
     background-size: 100%;    
->>>>>>> Stashed changes
 }  
 .example-card {
     max-width: 800px;
